# huskyhacks

./: .env.example  .gitignore  package-lock.json  package.json  popup.js  test_actions.py
Extension/: Manifest.json  background.js  config.js  content.js  popup.html  popup.js
ExtensionTest/: Manifest.json  popup.html
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/config/: bad_links.py
backend/app/core/: settings.py
backend/app/routers/: check_url.py  create_session.py  debug.py  session_visualization.py
backend/app/schemas/: ai.py  check_url.py  create_session.py  session_visualization.py
backend/app/services/: ai_learning_check.py  ai_link_classification.py  ai_procrastination_score.py  debounce.py  gemini_client.py  supabase_browsing.py  supabase_client.py  url_classifier.py
backend/app/utils/: normalize_url.py
backend/tests/: test_check_url_route.py  test_debounce.py  test_demo_mark_unproductive.py  test_gemini_integration.py  test_normalize_url.py  test_url_classifier.py
extension/: manifest.json  popup.css  popup.html  popup.js
supabase/: config.toml  reseed_sessions.sql  seed.sql
supabase/migrations/: 20260502170000_create_browsing_session_tables.sql
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  styles.css  supabase.ts
