[project]
name = "huskyhacks-backend"
version = "0.1.0"
description = "Backend API for the HuskyHacks focus assistant."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.4",
  "google-genai>=1.46.0",
  "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
